<resources>
    <string name="app_name">Fashion</string>
    <string name="image">Image\n</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="welcome">Welcome</string>
    <string name="please_login_to_continue_our_app">Please login to continue our app</string>
    <string name="fashion">Fashion</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="cnf_password">Repeat password</string>
    <string name="enter_username">Enter username</string>
    <string name="my_life_my_style">My Life My Style</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_cart">Cart</string>
    <string name="title_category">Category</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_new_account">Create an new account</string>
    <string name="by_creating_an_account_you_have_to_agree_with_our_terms_amp_conditions"><![CDATA[By creating an account you have to agree with our terms & Conditions]]></string>
    <string name="create_account">Create Account</string>
    <string name="personal_details">Personal Details</string>
    <string name="user_name">Divyanshu Kushwaha</string>
    <string name="user_email">divyanshurock39@gmail.com</string>
    <string name="items">items</string>
    <string name="wishlist">Wishlist</string>
    <string name="great_deal">Great Deal</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="search_hint">search here</string>
    <string name="search_for_products">Search products…</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="divyanshu">Divyanshu</string>
    <string name="age">Age</string>
    <string name="a_shoe_is_an_associate_in_nursing_item_of_footwear_supposed_to_safeguard_and_luxury_the_pedal_extremity_whereas_the_user_is_doing_numerous_activities">A shoe is an associate in Nursing item of footwear supposed to safeguard and luxury the pedal extremity whereas the user is doing numerous activities.</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="description">Description</string>
    <string name="on_going">On going</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="manage_address">Manage Address</string>
    <string name="google_map_api">AIzaSyBNbR_Bdqi63lrpe0tWIycNXagdrkD-Ixc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="switch_theme_daynight">Switch Theme(Current DayNight)</string>
    <string name="switch_theme_light">Switch Theme(Current Light Force Dark)</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_details">Product Details</string>
    <string name="rating_amp_reviews"><![CDATA[Rating & Reviews]]></string>
    <string name="request_otp">Request OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp_in">Resend OTP in:</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="logout">Logout</string>
    <string name="night_mode">Night Mode</string>
</resources>