<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@color/black"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/headerImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/title_profile"
        app:srcCompat="@drawable/ic_person2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/divyanshu"
        android:textColor="@color/white"
        android:id="@+id/headerUserName"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_secondary"
        android:id="@+id/headerUserEmail"
        android:textSize="16sp"
        android:text="@string/user_email" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />
</LinearLayout>