<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewModal"
            type="com.cloudsect.myapplication.view_model.LoginViewModel" />

        <variable
            name="getCredential"
            type="com.cloudsect.myapplication.click_listener.GetLoginCredential" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:windowBackground"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_20"
                    android:paddingEnd="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_40"
                    android:text="@string/fashion"
                    android:gravity="center"
                    android:fontFamily="@font/dancing_script_regular"
                    android:textSize="94sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_20"
                    android:paddingEnd="@dimen/margin_20"
                    android:text="@string/my_life_my_style"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/margin_30"
                    android:fontFamily="@font/caprasimo_regular"
                    android:textColor="@color/yellow"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_20"
                    android:paddingEnd="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/welcome"
                    android:fontFamily="@font/caprasimo_regular"
                    android:textSize="34sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_20"
                    android:paddingEnd="@dimen/margin_20"
                    android:text="@string/please_login_to_continue_our_app"
                    android:fontFamily="@font/niconne_regular"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_30"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:hint="@string/enter_email">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="14sp"
                        android:inputType="textEmailAddress"
                        android:text="@{viewModal.email}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_30"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:hint="@string/enter_password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textSize="14sp"
                        android:text="@{viewModal.password}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:backgroundTint="@color/button_bg_color"
                    android:textColor="@color/button_text_color"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/login" />

                <LinearLayout
                    android:id="@+id/ll_signup"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_40"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup"
                        android:textSize="16sp"
                        android:textColor="@color/yellow"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>