<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cloudsect.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"
            />
        <action
            android:id="@+id/action_navigation_home_to_gridProductListFragment"
            app:destination="@id/gridProductListFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.cloudsect.myapplication.ui.categories.CategoriesFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_navigation_category_to_gridProductListFragment"
            app:destination="@id/gridProductListFragment"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.cloudsect.myapplication.ui.mycart.MyCartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_my_cart" >
        <action
            android:id="@+id/action_navigation_cart_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"

            />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.cloudsect.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.cloudsect.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_personalDetailFragment"
            app:destination="@id/personalDetailFragment"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"
            />
        <action
            android:id="@+id/action_navigation_profile_to_myOrdersFragment"
            app:destination="@id/myOrdersFragment"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"
            />
        <action
            android:id="@+id/action_navigation_profile_to_wishlistFragment"
            app:destination="@id/wishlistFragment"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"
            />
        <action
            android:id="@+id/action_navigation_profile_to_addressFragment"
            app:destination="@id/addressFragment"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"
            />
        <action
            android:id="@+id/action_navigation_profile_to_creditDebitCardFragment"
            app:destination="@id/creditDebitCardFragment"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"
            />
            />
    </fragment>

    <fragment
        android:id="@+id/gridProductListFragment"
        android:name="com.cloudsect.myapplication.ui.grid_product_list.GridProductListFragment"
        android:label="Product List"
        tools:layout="@layout/fragment_grid_product_list" >
    </fragment>

    <fragment
        android:id="@+id/personalDetailFragment"
        android:name="com.cloudsect.myapplication.ui.personal_detail.PersonalDetailFragment"
        android:label="fragment_personal_detail"
        tools:layout="@layout/fragment_personal_detail" />
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.cloudsect.myapplication.ui.product_detail.ProductDetailsFragment"
        android:label="Product Details" />
    <fragment
        android:id="@+id/myOrdersFragment"
        android:name="com.cloudsect.myapplication.ui.myorders.MyOrdersFragment"
        android:label="My Orders"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/wishlistFragment"
        android:name="com.cloudsect.myapplication.ui.wishlist.WishlistFragment"
        android:label="Wishlist" />
    <fragment
        android:id="@+id/addressMapsFragment"
        android:name="com.cloudsect.myapplication.ui.addresses.AddressMapsFragment"
        android:label="fragment_address_maps"
        tools:layout="@layout/fragment_address_maps" />
    <fragment
        android:id="@+id/addressFragment"
        android:name="com.cloudsect.myapplication.ui.addresses.AddressFragment"
        android:label="fragment_address"
        tools:layout="@layout/fragment_address" />
    <fragment
        android:id="@+id/addressLayoutBottomSheet"
        android:name="com.cloudsect.myapplication.ui.addresses.AddressLayoutBottomSheet"
        android:label="fragment_address_layout_bottom_sheet"
        tools:layout="@layout/fragment_address_layout_bottom_sheet" >
        <action
            android:id="@+id/action_addressLayoutBottomSheet_to_addressMapsFragment"
            app:destination="@id/addressMapsFragment"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out"

            />
    </fragment>
    <fragment
        android:id="@+id/creditDebitCardFragment"
        android:name="com.cloudsect.myapplication.ui.cards.CreditDebitCardFragment"
        android:label="fragment_credit_debit_card"
        tools:layout="@layout/fragment_credit_debit_card" />

</navigation>